Add assoc_count() bench class and query gen
Also fix that in Neo4j's bench classes, atype is previously treated as
ints, not longs.